--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-hot-loader": "^1.3.0"
   },
   "dependencies": {
-    "react": "^0.14.2",
-    "react-dom": "^0.14.2"
+    "react": "16.1.1",
+    "react-dom": "16.1.1",
   }
 }
